<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WeatherVC" customModule="WeatherAPPTask" customModuleProvider="target">
            <connections>
                <outlet property="dialogMessageLable" destination="c2v-2D-asV" id="j4n-JR-OUZ"/>
                <outlet property="dialogView" destination="9VD-m7-9ba" id="MMl-3u-rIz"/>
                <outlet property="notAcuurateDataLable" destination="3aq-89-2b1" id="qVC-1f-DHC"/>
                <outlet property="retryButton" destination="Npb-DI-1nf" id="E3d-dV-88H"/>
                <outlet property="searchTF" destination="F68-Bf-rse" id="Hcj-j6-reo"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                <outlet property="weatherTableView" destination="p9h-x7-qcX" id="rCG-wj-hpx"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yyx-Be-jVw">
                    <rect key="frame" x="20" y="71" width="374" height="50"/>
                    <subviews>
                        <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="t05-RU-saL">
                            <rect key="frame" x="20" y="5" width="349" height="40"/>
                            <subviews>
                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search By City Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="F68-Bf-rse">
                                    <rect key="frame" x="0.0" y="0.0" width="299" height="40"/>
                                    <color key="tintColor" name="search"/>
                                    <color key="textColor" name="title"/>
                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                    <textInputTraits key="textInputTraits" returnKeyType="search"/>
                                </textField>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k3K-US-Xcw">
                                    <rect key="frame" x="309" y="0.0" width="40" height="40"/>
                                    <color key="backgroundColor" red="0.38470923899999998" green="0.80447971819999997" blue="0.97257417440000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                    <constraints>
                                        <constraint firstAttribute="width" secondItem="k3K-US-Xcw" secondAttribute="height" multiplier="1:1" id="VMW-8B-wPX"/>
                                    </constraints>
                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <state key="normal" image="magnifyingglass" catalog="system"/>
                                    <userDefinedRuntimeAttributes>
                                        <userDefinedRuntimeAttribute type="boolean" keyPath="isCapsule" value="YES"/>
                                    </userDefinedRuntimeAttributes>
                                    <connections>
                                        <action selector="didTapSearchBtn:" destination="-1" eventType="touchUpInside" id="cJy-H6-6Yj"/>
                                    </connections>
                                </button>
                            </subviews>
                        </stackView>
                    </subviews>
                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    <constraints>
                        <constraint firstItem="t05-RU-saL" firstAttribute="leading" secondItem="Yyx-Be-jVw" secondAttribute="leading" constant="20" id="34H-Mh-h5a"/>
                        <constraint firstItem="t05-RU-saL" firstAttribute="top" secondItem="Yyx-Be-jVw" secondAttribute="top" constant="5" id="9bK-cw-hSK"/>
                        <constraint firstAttribute="trailing" secondItem="t05-RU-saL" secondAttribute="trailing" constant="5" id="As6-53-YEn"/>
                        <constraint firstAttribute="bottom" secondItem="t05-RU-saL" secondAttribute="bottom" constant="5" id="Xya-tP-hrI"/>
                        <constraint firstAttribute="height" constant="50" id="mfU-82-ApF"/>
                    </constraints>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="boolean" keyPath="isCapsule" value="YES"/>
                    </userDefinedRuntimeAttributes>
                </view>
                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="v7c-QH-f3M">
                    <rect key="frame" x="15" y="131" width="384" height="765"/>
                    <subviews>
                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Not Accurate Data" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3aq-89-2b1">
                            <rect key="frame" x="0.0" y="0.0" width="384" height="0.0"/>
                            <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="18"/>
                            <color key="textColor" red="1" green="0.099147478070000003" blue="0.065827693249999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                            <nil key="highlightedColor"/>
                        </label>
                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="80" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="p9h-x7-qcX">
                            <rect key="frame" x="0.0" y="0.0" width="384" height="765"/>
                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        </tableView>
                    </subviews>
                </stackView>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9VD-m7-9ba">
                    <rect key="frame" x="20" y="373" width="374" height="150"/>
                    <subviews>
                        <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" axis="vertical" alignment="center" spacing="28" translatesAutoresizingMaskIntoConstraints="NO" id="L4e-o1-cXM">
                            <rect key="frame" x="20" y="61" width="334" height="28"/>
                            <subviews>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Enter City Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c2v-2D-asV">
                                    <rect key="frame" x="72" y="0.0" width="190" height="28"/>
                                    <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="23"/>
                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <nil key="highlightedColor"/>
                                </label>
                                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Npb-DI-1nf">
                                    <rect key="frame" x="117" y="0.0" width="100" height="47"/>
                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <constraints>
                                        <constraint firstAttribute="width" constant="100" id="dZX-Lq-l7f"/>
                                        <constraint firstAttribute="height" constant="47" id="hBm-VJ-HtY"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="18"/>
                                    <state key="normal" title="Retry">
                                        <color key="titleColor" red="0.38470923899999998" green="0.80447971819999997" blue="0.97257417440000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                    </state>
                                    <connections>
                                        <action selector="didTapRetryBtn:" destination="-1" eventType="touchUpInside" id="F3d-5o-MOq"/>
                                    </connections>
                                </button>
                            </subviews>
                        </stackView>
                    </subviews>
                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <constraints>
                        <constraint firstItem="L4e-o1-cXM" firstAttribute="leading" secondItem="9VD-m7-9ba" secondAttribute="leading" constant="20" id="EyO-d9-vwD"/>
                        <constraint firstAttribute="height" constant="150" id="Ika-JZ-V5t"/>
                        <constraint firstAttribute="width" constant="374" id="TTs-sj-zen"/>
                        <constraint firstAttribute="trailing" secondItem="L4e-o1-cXM" secondAttribute="trailing" constant="20" id="Vng-Im-5Qx"/>
                        <constraint firstItem="L4e-o1-cXM" firstAttribute="centerY" secondItem="9VD-m7-9ba" secondAttribute="centerY" id="W2O-Cr-WBU"/>
                    </constraints>
                </view>
            </subviews>
            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
            <color key="backgroundColor" red="0.38470923899999998" green="0.80447971819999997" blue="0.97257417440000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
            <constraints>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="v7c-QH-f3M" secondAttribute="trailing" constant="15" id="396-B0-rhb"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Yyx-Be-jVw" secondAttribute="trailing" constant="20" id="3Og-lU-Opo"/>
                <constraint firstItem="9VD-m7-9ba" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="8mH-TL-RpA"/>
                <constraint firstItem="v7c-QH-f3M" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="15" id="GCM-kI-f7o"/>
                <constraint firstItem="v7c-QH-f3M" firstAttribute="top" secondItem="Yyx-Be-jVw" secondAttribute="bottom" constant="10" id="I7p-OQ-Kbb"/>
                <constraint firstItem="9VD-m7-9ba" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="KZQ-UT-maf"/>
                <constraint firstItem="Yyx-Be-jVw" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="27" id="Ooo-vf-tOg"/>
                <constraint firstItem="Yyx-Be-jVw" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="RPx-cu-QxX"/>
                <constraint firstAttribute="bottom" secondItem="v7c-QH-f3M" secondAttribute="bottom" id="YIv-UU-3NH"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="9VD-m7-9ba" secondAttribute="trailing" constant="20" id="a47-sK-5nA"/>
                <constraint firstItem="9VD-m7-9ba" firstAttribute="width" secondItem="9VD-m7-9ba" secondAttribute="height" multiplier="187:75" id="jHA-6n-N1t"/>
            </constraints>
            <point key="canvasLocation" x="18.840579710144929" y="96.428571428571431"/>
        </view>
    </objects>
    <resources>
        <image name="magnifyingglass" catalog="system" width="32" height="32"/>
        <namedColor name="search">
            <color red="0.32899999618530273" green="0.32400000095367432" blue="0.4779999852180481" alpha="0.33000001311302185" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="title">
            <color red="0.32899999618530273" green="0.32400000095367432" blue="0.4779999852180481" alpha="0.33000001311302185" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
